# wayle-services

./: Cargo.toml
wayle-audio/: CHANGELOG.md  Cargo.toml
wayle-audio/src/: lib.rs
wayle-hyprland/: CHANGELOG.md  Cargo.toml
wayle-hyprland/src/: service.rs
wayle-hyprland/src/ipc/: command.rs
wayle-iwd/: Cargo.toml
wayle-iwd/src/: agent.rs  discovery.rs  error.rs  lib.rs  monitoring.rs  service.rs  signal_agent.rs  types.rs
wayle-iwd/src/network/: mod.rs
wayle-iwd/src/proxy/: adapter.rs  agent_manager.rs  device.rs  diagnostic.rs  known_network.rs  mod.rs  network.rs  object_manager.rs  station.rs
wayle-iwd/src/station/: mod.rs  monitoring.rs
wayle-mango/: CHANGELOG.md  Cargo.toml  README.md
wayle-mango/src/: constants.rs  error.rs  lib.rs  service.rs  types.rs
wayle-mango/src/core/: client.rs  mod.rs  monitor.rs
wayle-mango/src/ipc/: events.rs  messenger.rs  mod.rs
wayle-mango/src/monitoring/: mod.rs  refresh.rs
wayle-media/: CHANGELOG.md  Cargo.toml
wayle-media/src/: lib.rs
wayle-niri/: Cargo.toml  README.md
wayle-niri/src/: constants.rs  error.rs  lib.rs  service.rs
wayle-niri/src/core/: mod.rs  window.rs  workspace.rs
wayle-niri/src/ipc/: events.rs  messenger.rs  mod.rs
wayle-niri/src/monitoring/: dispatcher.rs  mod.rs  precondition.rs  property_refresh.rs
wayle-notification/: CHANGELOG.md  Cargo.toml
wayle-notification/src/: builder.rs  daemon.rs  events.rs  gtk_daemon.rs  image_cache.rs  lib.rs  monitoring.rs  persistence.rs  popup_timer.rs  service.rs  wayle_daemon.rs
wayle-notification/src/backends/: desktop_entry.rs  freedesktop.rs  gapplication.rs  gtk.rs  gvariant.rs  mod.rs  portal.rs
wayle-notification/src/core/: backend.rs  controls.rs  mod.rs  notification.rs  types.rs
wayle-notification/src/proxy/: mod.rs  wayle.rs
wayle-notification/src/types/: mod.rs  notification.rs
wayle-portal/: Cargo.toml
wayle-portal/src/: error.rs  host.rs  lib.rs  manifest.rs
wayle-power-profiles/: CHANGELOG.md  Cargo.toml
wayle-power-profiles/src/: lib.rs
wayle-power-profiles/src/types/: profile.rs
wayle-systray/: CHANGELOG.md  Cargo.toml
wayle-systray/src/: builder.rs  discovery.rs  lib.rs  monitoring.rs  registrar.rs  service.rs
wayle-systray/src/watcher/: discovery.rs  mod.rs
wayle-wallpaper/: CHANGELOG.md  Cargo.toml
wayle-wallpaper/src/: lib.rs
(+3 files in other folders)
